add WebConfig for cors; add theme toggle and layout draft

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -22,6 +22,10 @@ management:
       exposure:
         include: health
 
+app:
+  frontend-uri: http://localhost:5173
+#  base-uri: http://localhost:5173
+
 logging:
   level:
     sql: debug
